Update issue link in contribute

--- a/src/content/docs/project/contribute.mdx
+++ b/src/content/docs/project/contribute.mdx
@@ -11,7 +11,7 @@ Toute aide est la bienvenue, qu'il s'agisse de remontées, d'ajout de connaissan
 
 ## Participer
 
-En cas de problème, [chercher si une issue existe déjà](https://docs.github.com/fr/search-github/searching-on-github/searching-issues-and-pull-requests). Dans le cas contraire, n'hésitez pas à en ouvrir une nouvelle en utilisant le [formulaire dédié](https://github.com/Daweyy/docs.dofusretro.fr/issues/new/choose).
+En cas de problème, [vérifier qu'il n'ai pas déjà été remonté](https://github.com/Daweyy/docs.dofusretro.fr/issues). Dans le cas contraire, n'hésitez pas à en ouvrir une nouvelle en utilisant le [formulaire dédié](https://github.com/Daweyy/docs.dofusretro.fr/issues/new/choose).
 
 Pour toute contribution, [ce guide](https://git-scm.com/book/fr/v2/GitHub-Contribution-à-un-projet) détaille la marche à suivre générale pour GitHub.
 
