Update homepage for Launcher

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,9 +22,9 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 
 <CardGrid>
 	<LinkCard
-		title="Cytrus"
-		description="Le moteur de mises à jour de l'Ankama Launcher."
-		href="/cytrus"
+		title="Ankama Launcher"
+		description="Point de départ pour l'accès aux jeux Ankama."
+		href="/launcher"
 	/>
 	<LinkCard
 		title="Retro"
