Remove table of contents when needed

--- a/src/content/docs/project/about.mdx
+++ b/src/content/docs/project/about.mdx
@@ -3,6 +3,7 @@ title: A propos
 description: Informations sur le projet.
 sidebar:
   order: 1
+tableOfContents: false
 ---
 
 import { Aside } from '@astrojs/starlight/components';
